--- a/Canguros 1.0.2/Kanguros_PreAlpha/nbproject/private/private.properties
+++ b/Canguros 1.0.2/Kanguros_PreAlpha/nbproject/private/private.properties
@@ -1,2 +1,2 @@
 compile.on.save=true
-user.properties.file=C:\\Users\\MI PC\\AppData\\Roaming\\NetBeans\\8.1\\build.properties
+user.properties.file=C:\\Users\\Ivan_\\AppData\\Roaming\\NetBeans\\8.1\\build.properties
