--- a/Canguros 1.0.2/Kanguros_PreAlpha/nbproject/project.properties
+++ b/Canguros 1.0.2/Kanguros_PreAlpha/nbproject/project.properties
@@ -54,7 +54,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=vista.kanguros_vista
+main.class=vista.JMain
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
